fixed bug with horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
    
 }
 .menu-active{
+  
     transform: translateX(0%);
    transition: all .3s ease;
 }
@@ -23,4 +24,8 @@
     transform:rotate(-45deg);
     width: 100%;
     transition: all .3s ease;
+}
+.stop-scroll{
+    height: 100%;
+    overflow: hidden;
 }
